# tap-looker

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
tap_looker/: __init__.py  __main__.py  client.py  schemas.py  streams.py  tap.py
tap_looker/schemas/: explore.json  field.json  history.json  model.json  query.json
tests/: __init__.py  test_core.py
